# libc4

./: .gitattributes  .gitignore  API.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  NOTICE  PROPAGATE_METADATA_PORT.md  README.md  Readme.md  TODO.md  lib.c
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark.c
cmake/: c4Config.cmake.in
fuzz/: CMakeLists.txt  fuzz_digest.c  fuzz_encoder.c  fuzz_id_parse.c
include/: big.h  c4.h
include/c4/: c4.h  c4.hpp  c4m.h  c4m.hpp
src/: big.c  c4_internal.h  digest.c  encoder.c  id.c
src/c4/: encoder.cpp  id.cpp  internal.h  tree.cpp
src/c4m/: detect.cpp  encoder.cpp  entry.cpp  manifest.cpp  naturalsort.cpp  operations.cpp  parser.cpp  safename.cpp  sequence.cpp
tests/: CMakeLists.txt  Makefile  c4_bench.cpp  c4_id_test.cpp  c4m_chain_vector_test.cpp  c4m_identify_test.cpp  c4m_operations_test.cpp  c4m_test.cpp  error.c  error_reporting_test.c  id_test.c  testing.c
tests/testdata/chain-vector/: README.md  bad-checkpoint.c4m  bad-validator.c4m  resolved-root-id.txt  vector.c4m
